# sunrun-rs

./: .env.example  Cargo.toml  README.MD
.github/workflows/: main.yml
doc/: INSTALL.MD  QA.MD  README.MD
entity/: Cargo.toml
entity/src/: job_storage.rs  lib.rs  qr_scan.rs  session.rs  sunrun_task.rs  sunrun_tasklog.rs  sunrun_userinfo.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230615_123026_20230615_1.rs
src/: lib.rs  main.rs
src/common/: actix_exts.rs  mod.rs  r.rs
src/controllers/: admin_api_controller.rs  configure.rs  console_api_controller.rs  console_controller.rs  console_iframes_controller.rs  fallback.rs  mod.rs  public_api_controller.rs  root_controller.rs  task_api_controller.rs  user_api_controller.rs
src/errors/: business_error.rs  mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/tasks/: mod.rs  sunrun_task.rs
src/wraps/: admin_login_wrap.rs  auto_renew_jwt.rs  login_wrap.rs  mod.rs  session_wrap.rs
statics/: aipao.apk  index.html
statics/assets/: ActionButton-974fa8a9.js  Center-56035634.js  Center-63e76d18.css  Center-97d8f76e.js  Center-9e61d3e2.js  Center-f934341d.js  ForgetPassword-219eaef4.js  ForgetPassword-533e1f0f.js  ForgetPassword-7d7359eb.css  ForgetPassword-e50476c0.js  ForgetPassword-e5d46072.js  ImgCaptcha.vue_vue_type_script_setup_true_lang-14a9fb05.js  ImgCaptcha.vue_vue_type_script_setup_true_lang-17ea1ebb.js  ImgCaptcha.vue_vue_type_script_setup_true_lang-96a4328d.js  ImgCaptcha.vue_vue_type_script_setup_true_lang-f9e4df3f.js  Index-14f8de43.js  Index-4c8c25a6.js  Index-5b2e0c9a.js  Index-6ba9a283.js  Index-abc87372.js  Index-b017a436.js  Index-e2a07ceb.css  Index-e3788fb6.js  (+142 more)
templates/: error.html  index.html
(+57 files in other folders)
