[package]
name = "sunrun-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".","migration","entity"]

[dependencies]
tokio = {version = "^1",features = ["full"]}
reqwest = {version = "^0" , default-features = false , features = ["rustls-tls","gzip","json"]}
serde = {version = "^1" , features = ["derive"]}
serde_json = "^1"
lazy_static = "^1"
log = "^0"
async-trait = "^0"
anyhow = "^1"
rand = "^0"
chrono = "^0"
chrono-tz = "^0"
aes = "^0"
cbc = { version = "^0", features = ["std"] }
base64 = "^0"
actix-web = {version = "^4"}
dotenv = "^0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio-scheduler-rs = "^0"
actix-web-validator = "^5"
validator = { version = "^0", features = ["derive"] }
bcrypt = "^0"
once_cell = "^1"
actix-session = {version = "^0" , features = ["cookie-session"]}
uuid = {version = "^1", features = ["v4","fast-rng"]}
cron = "^0"
futures = "^0"
captcha = "^0"
lettre = {version = "^0",features = ["tokio1","tokio1-rustls-tls","builder","smtp-transport"],default-features=false}
tera = "^1"
regex = "^1"
actix-files = "^0"
fast_log = "^1"

entity = {path = "entity"}
migration = {path = "migration"}