[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
sea-orm = "^0"
uuid = { version = "^1", features = ["v4", "fast-rng"] }
chrono = "^0"
serde_json = "^1"